<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/eventCardView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/eventImage"
                android:layout_width="wrap_content"
                android:layout_height="235dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/teatro"
                android:contentDescription="@string/todo" />

            <Button
                android:id="@+id/verMas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/ver_m_s"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventImage"
                tools:background="#FF1744" />

            <Button
                android:id="@+id/btnAsistir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/asistir"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/verMas"
                app:layout_constraintTop_toBottomOf="@+id/eventImage"
                tools:background="@color/rojoBotones" />

            <TextView
                android:id="@+id/nombreEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="32dp"
                android:text="@string/evento"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/white"
                android:textIsSelectable="false"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/eventImage"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/fecha_horario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sab_nov_28_22_00_hs"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/nombreEvento"
                app:layout_constraintTop_toBottomOf="@+id/nombreEvento" />

            <Button
                android:id="@+id/btnOpinar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="8dp"
                android:text="opinar"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventImage"
                tools:background="@color/rojoBotones" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>